--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5b461d02",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,6 @@
     "\n",
     "import os\n",
     "import sys\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
     "current_dir = os.getcwd()\n",
@@ -384,8 +383,7 @@
     "\n",
     "Notes\n",
     " - Half-hour rows are average power over the interval; daily energy (MWh) = Σ(MW × 0.5 h).\n",
-    " - Forecast columns refer to demand, not generation.\n",
-    " - Verify exchange sign in your specific file’s metadata and keep it consistent in analysis."
+    " - Forecast columns refer to demand, not generation."
    ]
   },
   {
